--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <h1>Welcome to</h1>
-    <h1>Sandwip Mitra World!</h1>
+    <h1><span class="name-color">Sandwip Mitra</span> World!</h1>
+    <h3>Build Climber and Train Stopper</h3>
+    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will nor stop until I become the Web Development Hero</p>
 
 </body>
 </html>
