--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="name-color">Sandwip Mitra</span> World!</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will nor stop until I become the Web Development Hero</p>
+            <a class="link-btn" href="https://www.linkedin.com/in/sandwip-m-678630161/" target="_blank">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/my-bg.png" alt="my image">
         </div>
+        
     </section>
 
 </body>
