--- a/index.html
+++ b/index.html
@@ -21,8 +21,18 @@
         </div>
         <div class="half-width">
             <img src="images/my-bg.png" alt="my image">
+        </div>      
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="">
         </div>
-        
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the HTML and CSS. I can build any simple website. I can even teach my uncle how to make simple website. My goal is to be a great developer and learn advanced topics</p>
+            <a class="link-btn" href="https://www.linkedin.com/in/sandwip-m-678630161/" target="_blank">DOWNLOAD RESUME</a>
+        </div>
     </section>
 
 </body>
