--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="name-color">Sandwip Mitra</span> World!</h1>
@@ -23,7 +23,7 @@
             <img src="images/my-bg.png" alt="my image">
         </div>      
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/my-bg2.png" alt="">
         </div>
@@ -32,6 +32,21 @@
             <h3>Become a web developer</h3>
             <p>I already learned the HTML and CSS. I can build any simple website. I can even teach my uncle how to make simple website. My goal is to be a great developer and learn advanced topics</p>
             <a class="link-btn" href="https://www.linkedin.com/in/sandwip-m-678630161/" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="exp-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="exp-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="name-color">2022 - Present | Entry Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>  
+            </div>
+            <div class="exp-item">
+                <h2>Junior Web Developer</h2>
+                <h3 class="name-color">2021 - 2022 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
         </div>
     </section>
 
