--- a/index.html
+++ b/index.html
@@ -37,18 +37,21 @@
     <section class="exp-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="exp-item">
+            <div id="full-stack-web-dev" class="exp-item">
                 <h2>Full Stack Web Developer</h2>
                 <h3 class="name-color">2022 - Present | Entry Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>  
             </div>
-            <div class="exp-item">
+            <div id="junior-web-developer" class="exp-item">
                 <h2>Junior Web Developer</h2>
                 <h3 class="name-color">2021 - 2022 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
             </div>
         </div>
     </section>
+    <footer>
+        <p>© Sandwip Mitra 2022, a Programming Hero Creation.</p>
+    </footer>
 
 </body>
 </html>
